tests/type-errors/move-semantics/consuming_receiver_field_place.cx
struct Item : @nocopy {
    int data;
};

struct Container {
    Item inner;
};

void Item::consume(*this) {}

int main() {
    Container container = (Container) {
        .inner = (Item) {
            .data = 1
        }
    };

    container.inner.consume();
    return 0;
}
